# mox

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_FIX_PLAN.md  CLAUDE.md  CODE_WIKI.md  Dockerfile  LICENSE  README.md  REPO_OVERVIEW.md  SECURITY.md  alembic.ini  bandit.yaml  bandit_report.json  bandit_report_after_fix.json  docker-compose.yml  fix_gcg.py  merge_db.py  mypy.ini  pyproject.toml  pytest.ini  redteam_report.html  redteam_report.json  refactor_api.py  refactor_infra.py  revert_theme.py  run_ollama_attack.bat  run_ollama_attack.ps1  sitecustomize.py  start.bat  start.ps1  start.py  test_redteam.py  历史记录.txt  验收记录_完整报告.md
.github/workflows/: ci-v2.yml  ci.yml
.qwen/: settings.json
alembic/: env.py
alembic/versions/: 001_initial.py
deploy/: prometheus.yml
docs/: DEPRECATION_ROADMAP.md  MODULE_CONSOLIDATION_PLAN.md  USAGE.md  api.md  attacks.md  defense.md  evaluation.md  index.md
examples/: ATTACK_LOOP_README.md  advanced_attack_loop.py  agent_attack_demo.py  agent_attack_example.py  attack_loop.py  attack_loop_config_example.yaml  attack_loop_core.py  attack_loop_example.py  basic_usage.py  cache_example.py  custom_attack_defense.py  database_example.py  minimax_usage.py  new_features.py  ollama_attack.py  ollama_demo.py  test_attack_loop.py
frontend/: .eslintrc.cjs  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.js  vitest.config.js
frontend/src/: App.jsx  auth.js  index.css  main.jsx  polish-build.test.js  workspace-theme.css
mox/: __init__.py  __main__.py  api.py  attack_loop_engine.py  cli.py  ui.py
mox/attack_loop/: __init__.py  core.py
mox/attacks/: __init__.py  adaptive_strategy.py  advanced_attacks.py  advanced_attacks_v2.py  advanced_executor.py  advanced_templates.py  agent_attacks.py  agent_attacks_advanced.py  agent_attacks_v2.py  base.py  chain.py  code_security.py  config.py  evaluation.py  gcg.py  gcg_benchmark.py  gradient_attack.py  improved_gcg.py  jailbreak.py  knowledge_extraction.py  llm_driven.py  loop_engine.py  meta_adversarial.py  multi_turn.py  multimodal_attacks.py  novel_attacks.py  novel_attacks_encoding.py  novel_attacks_v2.py  novel_attacks_v3.py  orchestrator.py  prompt_injection.py  rag_attacks.py  rag_retriever.py  registry.py
mox/auto_redteam/: __init__.py  agent.py  prompts.py  state.py  tools.py
mox/core/: __init__.py  advanced_cache.py  agent_runtime.py  audit.py  auth.py  cache.py  changelog.py  chinese_llm.py  cicd.py  config.py  database.py  database_ext.py  deprecation.py  error_handling.py  evaluation.py  events.py  exceptions.py  gateway.py  history_store.py  langchain_agent.py  llm.py  llm_gateway.py  llm_router.py  llm_vision.py  logging.py  monitoring.py  monitoring_service.py  observability.py  patterns.py  plugin.py  prometheus_metrics.py  prompt_protection.py  rag_isolation.py  registry.py  report.py  sandbox.py  scheduler.py  security_guard.py  similarity.py  task_store.py  (+7 more)
mox/defense/: __init__.py  base.py  constitutional_ai.py  encoding_detector.py  enhanced_filter.py  hallucination.py  hardening.py  injection_detector.py  input_filter.py  llm_judge.py  orchestrator.py  output_filter.py  output_validator.py  pipeline_factory.py  registry.py  semantic_firewall.py
mox/evaluation/: __init__.py  attack_evaluator.py  attack_success.py  benchmarks.py  benchmarks_legacy.py  benchmarks_v2.py  datasets.py  evaluator.py  extended_benchmarks.py  extended_datasets.py  framework.py  judge.py  multi_dim_evaluator.py  owasp_tests.py  perplexity_judge.py  redteam.py  redteam_llms.py  safety_card.py  training_data_exporter.py  types.py  visualization.py
mox/infrastructure/: advanced_cache.py  audit.py  auth.py  cache.py  cicd.py  config.py  database.py  event_handlers.py  monitoring.py  observability.py  plugin.py  report.py  sandbox.py  scheduler.py  tasks.py  telemetry.py  utils.py  worker.py
mox/middleware/: __init__.py  advanced_rate_limit.py  api_versioning.py  audit_logging.py  rate_limit.py
mox/routes/: __init__.py  api_v2.py  attack.py  attack_loop.py  (+15 more)
plugins/: custom_attack.py
scripts/: verify_registries.py
tests/: __init__.py  conftest.py  test_adaptive_strategy.py  test_attack_evaluation.py  test_attack_evaluator.py  test_attack_loop_report.py  test_attack_payload.py  test_attack_registry.py  test_attacks_exports.py  test_audit.py  test_auto_redteam_routes.py  test_backend_algorithm_upgrades.py  test_benchmark_routes.py  test_canvas_routes.py  test_cli_redteam.py  test_config.py  test_core.py  test_data_dir.py  test_database_extended.py  test_datasets.py  test_deprecation.py  test_e2e_api.py  test_enhanced_defense.py  test_error_handling.py  test_evaluation_improvements.py  test_exceptions.py  test_extended_datasets.py  test_gateway_validation.py  test_history_persistence.py  test_history_store.py  test_improved_gcg.py  test_knowledge_extraction.py  test_langchain_agent.py  test_llm.py  test_llm_judge.py  test_local_model_support.py  test_missing_modules.py  test_monitoring_service.py  test_multimodal_attacks.py  test_novel_features.py  (+19 more)
(+136 files in other folders)
