[project]
name = "mox"
version = "0.3.0"
description = "大模型对抗攻防平台 - LLM Adversarial Attack & Defense Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LLM Providers
    "openai>=1.60.0",
    "anthropic>=0.40.0",
    "cohere>=5.13.0",
    "google-genai>=1.0.0",
    # ML/DL
    "torch>=2.5.0",
    "transformers>=4.48.0",
    "sentence-transformers>=3.4.0",
    # LangChain Ecosystem
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.0",
    # HTTP & Async
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "tenacity>=9.0.0",
    # Data Processing
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "tqdm>=4.67.0",
    "datasets>=3.2.0",
    "scikit-learn>=1.6.0",
    "tiktoken>=0.8.0",
    # UI & CLI
    "rich>=13.9.0",
    "gradio>=5.12.0",
    "jinja2>=3.1.5",
    # Database
    "sqlalchemy>=2.0.37",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    # Auth & Security
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.2.0",
    "bandit>=1.8.0",
    # Cache & Queue
    "redis>=5.2.0",
    "celery>=5.4.0",
    # Observability
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-logging>=0.50b0",
    "structlog>=25.1.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
local = [
    "peft>=0.14.0",
    "bitsandbytes>=0.45.0",
    "accelerate>=1.3.0",
    "vllm>=0.7.0",
]
quantization = [
    "auto-gptq>=0.7.0",
    "autoawq>=0.2.0",
]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.1",
    "pytest-xdist>=3.6.0",
    "hypothesis>=6.124.0",
    # Type Checking
    "mypy>=1.14.0",
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.0",
    # Linting & Formatting
    "ruff>=0.9.0",
    "black>=25.1.0",
    "isort>=5.13.0",
    # Security
    "safety>=3.2.0",
    "pip-audit>=2.8.0",
    # Pre-commit
    "pre-commit>=4.0.0",
]

[project.scripts]
mox = "mox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
